Moving ChatWindow to its own element

--- a/ChatLLM/Assets/ChatLLM/Resources/UI/ChatWindow.uss
+++ b/ChatLLM/Assets/ChatLLM/Resources/UI/ChatWindow.uss
@@ -1,3 +1,6 @@
+.chat-window {
+    flex-grow: 1;
+}
 .chat-history {
     padding-top: var(--appui-spacing-200);
     padding-right: var(--appui-spacing-200);
