--- a/ChatSample/Assets/ChatLLM/Runtime/Resources/UI/ChatWindow.uxml
+++ b/ChatSample/Assets/ChatLLM/Runtime/Resources/UI/ChatWindow.uxml
@@ -12,10 +12,14 @@
     <appui:Panel>
         <chat:ChatWindow name="Chat Window" class="chat-window">
             <ui:ScrollView name="Chat History" class="chat-history"/>
-            <ui:VisualElement name="Chat Input" class="chat-input">
-                <appui:IconButton name="Attach Button" class="attach-button" quiet="true" icon="link"/>
-                <appui:TextField name="Input Field" class="input-field" multiline="true" placeholder="Send a message"/>
-                <appui:IconButton name="Send Button" class="send-button" quiet="true" icon="play"/>
+            <ui:VisualElement name="Input Container" class="input-container">
+                <ui:VisualElement name="Attachment Container" class="attachment-container">
+                </ui:VisualElement>
+                <ui:VisualElement name="Chat Input" class="chat-input">
+                    <appui:IconButton name="Attach Button" class="attach-button" quiet="true" icon="link"/>
+                    <appui:TextField name="Input Field" class="input-field" multiline="true" placeholder="Send a message"/>
+                    <appui:IconButton name="Send Button" class="send-button" quiet="true" icon="play"/>
+                </ui:VisualElement>
             </ui:VisualElement>
         </chat:ChatWindow>
     </appui:Panel>
